# smarthome-tivoli

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README-k8s.md  README.md  add-neighbor.sh  deploy.sh  device_mappings_auto.toml  docker-compose.yml  k8s-deployment.yaml  k8s-ingress.yaml  k8s-multitenant.yaml  monitoring.yaml  scale-demo.sh  setup-monitoring.sh  setup.sh
homebridge-knx-bridge/: README.md  config.schema.json  index.js  package.json
monitoring/: grafana-config.yaml  prometheus-config.yaml
secrets/: .gitignore  README.md  create-sealed-secret.sh  sealed-secrets-controller.yaml
src/: api_server.rs  auto_discovery.rs  command_mapper.rs  config.rs  device.rs  knx_client.rs  main.rs  state_manager.rs
