[package]
name = "knx-homekit-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
# HTTP server for API
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
# HTML parsing
scraper = "0.19"
# Async runtime
tokio = { version = "1.35", features = ["full"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
# HomeKit (dependency conflict - need alternative solution)
# hap = "0.1.0-pre.15"
# Error handling
anyhow = "1.0"
thiserror = "1.0"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Utilities
futures = "0.3"
# Headless browser for OAuth login
headless_chrome = "1.0"
# Environment variables
dotenv = "0.15"
# URL encoding/decoding
urlencoding = "2.1"
